Bug 917757 - Don't trigger Heap<T> post barriers in XPConnect shutdown r=bholley